# bxt-launcher

./: .gitignore  README.md  meson.build
build-aux/meson/: postinstall.py
data/: meson.build  yalter.BxtLauncher.appdata.xml.in  yalter.BxtLauncher.desktop.in  yalter.BxtLauncher.gschema.xml
po/: POTFILES  meson.build
src/: bxt_launcher.gresource.xml  main.vala  meson.build  process.vala  system-monitor.vala  window.ui  window.vala
